[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "django>=5.2.7",
  "django-environ>=0.12.0",
  "django-mdeditor>=0.1.20",
  "django-solo>=2.4.0",
  "django-taggit>=6.1.0",
  "markdown>=3.9",
  "python-frontmatter>=1.1.0",
]

[dependency-groups]
dev = ["django-debug-toolbar>=6.0.0"]
prod = ["gunicorn>=23.0.0"]
