[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "boto3>=1.40.71",
  "django>=5.2.7",
  "django-environ>=0.12.0",
  "django-mdeditor>=0.1.20",
  "django-solo>=2.4.0",
  "django-storages[s3]>=1.14.6",
  "django-taggit>=6.1.0",
  "django-unfold>=0.72.0",
  "markdown>=3.9",
  "psycopg>=3.2.12",
  "psycopg2-binary>=2.9.11",
  "python-frontmatter>=1.1.0",
]

[dependency-groups]
dev = ["django-debug-toolbar>=6.0.0"]
prod = ["gunicorn>=23.0.0"]
